fix foundation navbar overlap glitch

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,8 +11,8 @@
  * file per style scope.
  *
  *= require_tree .
- *= require_self
  *= require foundation_and_overrides
+ *= require_self
  *= require vendor_application
 
  */
@@ -22,4 +22,18 @@
    display: block;
    height: 0;
    clear: both;
+}
+
+body {
+  padding: 0!important;
+}
+
+#content {
+  margin-top: 40px;
+}
+
+.container {
+  max-width: 990px;
+  width: 100%;
+  margin: 0 auto;
 }
